2017-09-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Optimize stm8 left shifts a bit better.

2017-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/preserves_regs.c:
	  Test specifications for preserved registers.

2017-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Fix handling of specifications for preserved registers.

2017-09-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-441448.c:
	* support/regression/tests/bug2729218.c:
	  Disabled for gbz80.

2017-09-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/peeph.def:
	  Optimize bit-xor with BCPL.
	* support/regression/tests/bug-2642.c:
	  Improve test case.

2017-08-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCpeeph.c:
	  Improve notVolatile() for stm8.
	* src/stm8/peeph.def:
	  Add more rules for optimization with BSET/BRES.
	* support/regression/tests/bug-2642.c:
	  Add a new test case.

2017-08-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  More verbose error message on initialization from incompatible pointer type.

2017-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix bug #2640.

2017-08-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock),
	* src/SDCCptropt.c (ptrPostIncDecOpt, pattern1, pattern2),
	* src/SDCCptropt.h: fix bug #2459

2017-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2624

2017-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdio.h,
	  device/lib/ds390/putchar.c:
	  Make getchar() prototype standard-compliant.
	* src/stm8/gen.c:
	  Improve I/O and bit toggling.

2017-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix ASMOP_A / ASMOP_ZERO initialization.

2017-08-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve use of register A.

2017-08-07 Philipp Klaus Krause <pkk AT spth.de>
